tests/should_fail/let_struct_wrong_field.nv
module fail
// Let destructure: struct with wrong field name
struct Point { x: Int, y: Int }
let Point { x, z } = Point(1, 2)
